--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -76,8 +76,15 @@
                         <div class="header__top__right">
                             <div class="header__top__auth">
                                 <ul>
-                                    <li><a href="#">Login</a></li>
-                                    <li><a href="#">Register</a></li>
+                                    @if (!User.Identity.IsAuthenticated)
+                                    {
+                                        <li><a asp-controller="Auth" asp-action="Login">Login</a></li>
+                                        <li><a asp-controller="Auth" asp-action="Register">Register</a></li>
+                                    }
+                                    else
+                                    {
+                                        <li><a asp-controller="Auth" asp-action="Logout">Log Out</a></li>
+                                    }
                                 </ul>
                             </div>
                             <div class="header__top__language">
