Done Login and Registration

--- a/Web/Views/Auth/Register.cshtml
+++ b/Web/Views/Auth/Register.cshtml
@@ -14,7 +14,7 @@
     <input type="text" name="Name" placeholder="Enter your Name" required>
 
     <label for="first">PhoneNumber:</label>
-    <input type="number" name="PhoneNumber" placeholder="Enter your PhoneNumber" required>
+    <input type="text" name="PhoneNumber" placeholder="Enter your PhoneNumber" required>
 
 
     <label for="password">Password:</label>
