--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using Mango.Web.Utility
+
 <!DOCTYPE html>
 <html lang="zxx">
 
@@ -60,7 +61,6 @@
         </div>
     </div>
     <!-- Offcanvas Menu End -->
-
     <!-- Header Section Begin -->
     <header class="header">
         <div class="header__top">
@@ -83,6 +83,11 @@
                                     }
                                     else
                                     {
+                                        if (User.IsInRole(SD.RoleAdmin))
+                                        {
+                                            <li><a asp-controller="RoomType" asp-action="RoomTypeIndex">Room Types</a></li>
+                                            <li><a asp-controller="Room" asp-action="RoomIndex">Room</a></li>
+                                        }
                                         <li><a asp-controller="Auth" asp-action="Logout">Log Out</a></li>
                                     }
                                 </ul>
@@ -101,134 +106,142 @@
                 </div>
             </div>
         </div>
-        <div class="header__nav__option">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-2">
-                        <div class="header__logo">
-                            <a href="~/index.html"><img src="img/logo.png" alt=""></a>
+
+        @if (!User.IsInRole(SD.RoleAdmin))
+        {
+            <div class="header__nav__option">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-2">
+                            <div class="header__logo">
+                                <a href="~/index.html"><img src="img/logo.png" alt=""></a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-lg-10">
-                        <div class="header__nav">
-                            <nav class="header__menu">
-                                <ul class="menu__class">
-                                    <li class="active"><a href="~/index.html">Home</a></li>
-                                    <li><a href="./rooms.html">Rooms</a></li>
-                                    <li><a href="./about.html">About Us</a></li>
-                                    <li>
-                                        <a href="#">Pages</a>
-                                        <ul class="dropdown">
-                                            <li><a href="./about.html">About Us</a></li>
-                                            <li><a href="./room-details.html">Room Details</a></li>
-                                            <li><a href="./blog-details.html">Blog Details</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="./blog.html">News</a></li>
-                                    <li><a href="./contact.html">Contact</a></li>
-                                </ul>
-                            </nav>
-                            <div class="header__nav__widget">
-                                <a href="#">Book Now <span class="arrow_right"></span></a>
+                        <div class="col-lg-10">
+                            <div class="header__nav">
+                                <nav class="header__menu">
+                                    <ul class="menu__class">
+                                        <li class="active"><a href="~/index.html">Home</a></li>
+                                        <li><a href="./rooms.html">Rooms</a></li>
+                                        <li><a href="./about.html">About Us</a></li>
+                                        <li>
+                                            <a href="#">Pages</a>
+                                            <ul class="dropdown">
+                                                <li><a href="./about.html">About Us</a></li>
+                                                <li><a href="./room-details.html">Room Details</a></li>
+                                                <li><a href="./blog-details.html">Blog Details</a></li>
+                                            </ul>
+                                        </li>
+                                        <li><a href="./blog.html">News</a></li>
+                                        <li><a href="./contact.html">Contact</a></li>
+                                    </ul>
+                                </nav>
+                                <div class="header__nav__widget">
+                                    <a href="#">Book Now <span class="arrow_right"></span></a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="canvas__open">
-                    <span class="fa fa-bars"></span>
+                    <div class="canvas__open">
+                        <span class="fa fa-bars"></span>
+                    </div>
                 </div>
             </div>
-        </div>
+        }
     </header>
     <!-- Header Section End -->
-
     @RenderBody()
 
     <!-- Footer Section Begin -->
     <footer class="footer set-bg" data-setbg="img/footer-bg.jpg" style="background-image: url(&quot;img/footer-bg.jpg&quot;);">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="logo__carousel owl-carousel">
-                        <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-1.png" alt=""></a>
-                        </div>
-                        <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-2.png" alt=""></a>
-                        </div>
-                        <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-3.png" alt=""></a>
-                        </div>
-                        <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-4.png" alt=""></a>
-                        </div>
-                        <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-5.png" alt=""></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        @* <div class="container">
+        <div class="row">
+        <div class="col-lg-12">
+        <div class="logo__carousel owl-carousel">
+        <div class="logo__carousel__item">
+        <a href="#"><img src="img/logo/logo-1.png" alt=""></a>
         </div>
+        <div class="logo__carousel__item">
+        <a href="#"><img src="img/logo/logo-2.png" alt=""></a>
+        </div>
+        <div class="logo__carousel__item">
+        <a href="#"><img src="img/logo/logo-3.png" alt=""></a>
+        </div>
+        <div class="logo__carousel__item">
+        <a href="#"><img src="img/logo/logo-4.png" alt=""></a>
+        </div>
+        <div class="logo__carousel__item">
+        <a href="#"><img src="img/logo/logo-5.png" alt=""></a>
+        </div>
+        </div>
+        </div>
+        </div>
+        </div> *@
+
+
         <div class="container">
-            <div class="footer__content">
-                <div class="row">
-                    <div class="col-lg-3 col-md-6 col-sm-6">
-                        <div class="footer__about">
-                            <div class="footer__logo">
-                                <a href="#"><img src="~/img/logo.png" alt=""></a>
-                            </div>
-                            <h4>(123) 456-78-91096</h4>
-                            <ul>
-                                <li>Ernser Vista Suite 437, NY</li>
-                                <li>Info.colorlib@gmail.com</li>
-                            </ul>
-                            <div class="footer__social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-linkedin"></i></a>
-                                <a href="#"><i class="fa fa-youtube-play"></i></a>
+            @if (!User.IsInRole(SD.RoleAdmin))
+            {
+                <div class="footer__content">
+                    <div class="row">
+                        <div class="col-lg-3 col-md-6 col-sm-6">
+                            <div class="footer__about">
+                                <div class="footer__logo">
+                                    <a href="#"><img src="~/img/logo.png" alt=""></a>
+                                </div>
+                                <h4>(123) 456-78-91096</h4>
+                                <ul>
+                                    <li>Ernser Vista Suite 437, NY</li>
+                                    <li>Info.colorlib@gmail.com</li>
+                                </ul>
+                                <div class="footer__social">
+                                    <a href="#"><i class="fa fa-facebook"></i></a>
+                                    <a href="#"><i class="fa fa-twitter"></i></a>
+                                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                                    <a href="#"><i class="fa fa-youtube-play"></i></a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-3 offset-lg-1 col-md-5 offset-md-1 col-sm-6">
-                        <div class="footer__widget">
-                            <h4>Quick Link</h4>
-                            <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Booking</a></li>
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Review</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                            <ul>
-                                <li><a href="#">Services</a></li>
-                                <li><a href="#">Our Room</a></li>
-                                <li><a href="#">Restaurants</a></li>
-                                <li><a href="#">Payments</a></li>
-                                <li><a href="#">Events</a></li>
-                            </ul>
+                        <div class="col-lg-3 offset-lg-1 col-md-5 offset-md-1 col-sm-6">
+                            <div class="footer__widget">
+                                <h4>Quick Link</h4>
+                                <ul>
+                                    <li><a href="#">Home</a></li>
+                                    <li><a href="#">Booking</a></li>
+                                    <li><a href="#">About Us</a></li>
+                                    <li><a href="#">Review</a></li>
+                                    <li><a href="#">Contact</a></li>
+                                </ul>
+                                <ul>
+                                    <li><a href="#">Services</a></li>
+                                    <li><a href="#">Our Room</a></li>
+                                    <li><a href="#">Restaurants</a></li>
+                                    <li><a href="#">Payments</a></li>
+                                    <li><a href="#">Events</a></li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-lg-5 col-md-8 col-sm-12">
-                        <div class="footer__newslatter">
-                            <h4>Subscribe our newlatester</h4>
-                            <form action="#">
-                                <input type="text" placeholder="Your E-mail Address">
-                                <button type="submit">Subscribe</button>
-                            </form>
-                            <div class="footer__newslatter__find">
-                                <h5>Find Us:</h5>
-                                <div class="footer__newslatter__find__links">
-                                    <a href="#"><i class="fa fa-tripadvisor"></i></a>
-                                    <a href="#"><i class="fa fa-map-o"></i></a>
-                                    <a href="#"><i class="fa fa-dribbble"></i></a>
-                                    <a href="#"><i class="fa fa-forumbee"></i></a>
+                        <div class="col-lg-5 col-md-8 col-sm-12">
+                            <div class="footer__newslatter">
+                                <h4>Subscribe our newlatester</h4>
+                                <form action="#">
+                                    <input type="text" placeholder="Your E-mail Address">
+                                    <button type="submit">Subscribe</button>
+                                </form>
+                                <div class="footer__newslatter__find">
+                                    <h5>Find Us:</h5>
+                                    <div class="footer__newslatter__find__links">
+                                        <a href="#"><i class="fa fa-tripadvisor"></i></a>
+                                        <a href="#"><i class="fa fa-map-o"></i></a>
+                                        <a href="#"><i class="fa fa-dribbble"></i></a>
+                                        <a href="#"><i class="fa fa-forumbee"></i></a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            }
             <div class="footer__copyright">
                 <div class="row">
                     <div class="col-lg-7 col-md-7">
@@ -249,7 +262,6 @@
         </div>
     </footer>
     <!-- Footer Section End -->
-
     <!-- Js Plugins -->
     <script src="~/js/jquery-3.3.1.min.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
